updated workflow with Python version

--- a/.github/workflows/mlops-ci-cd.yaml
+++ b/.github/workflows/mlops-ci-cd.yaml
@@ -9,11 +9,13 @@ jobs:
   check-bats-version:
     runs-on: self-hosted
     steps:
-      - name: checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v5
 
       - name: Set up Python
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.11.12'  # Specify your Python version here
 
       - name: Set up environment with uv
         run: uv sync
