--- a/.github/workflows/mlops-ci-cd.yaml
+++ b/.github/workflows/mlops-ci-cd.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11.12'  # Specify your Python version here
+          python-version: '3.11'
 
       - name: Set up environment with uv
         run: uv sync
